syntax = "proto3";
package proto;
option go_package = "../pb";

import "proto/common.proto";

service PreDetectCommand {
  rpc RunPreDetect(ServiceInput) returns (ServiceEmptyOutput);
}
